--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu-bar {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Inria Sans', sans-serif;
+  background-color: black;
+  padding: 15px 20px;
+}
+
+.logo {
+  font-family: 'Inria Sans', sans-serif;
   color: white;
+  font-size: 20px;
+  margin-right: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.menu-items {
+  font-family: 'Inria Sans', sans-serif;
+  display: flex;
+  gap: 60px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-item {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
 }
+
