--- a/src/pages/envioEmail/envioEmail.css
+++ b/src/pages/envioEmail/envioEmail.css
@@ -1,22 +1,39 @@
-.fundo{
-        display: flex;
-        flex-direction: column;
-        background-color: darkgrey;
-        align-items: center;
-        padding: 20px;
-        min-height: 100vh;
-        box-sizing: border-box;
-    }
-
-.modal-conf {
-    width: 100%;
-    max-width: 600px;
-    background-color: #fff;
-    padding: 15px 20px;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 800px;
+    width: auto;
     text-align: center;
-    color: #333;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .titulo {
+    font-size: 24px;
+    font-family: 'Inria Sans', sans-serif;
+    margin-bottom: 20px;
+  }
+  
+  .mensagem {
     font-size: 16px;
-}
+    font-family: 'Inria Sans', sans-serif;
+    margin-bottom: 40px;
+    max-width: 600px;
+  }
+  
+  .botao {
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .botao:hover {
+    background-color: black;
+  }
+  
