--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,12 @@
 }
 
 .logo {
-  font-family: 'Inria Sans', sans-serif;
-  color: white;
-  font-size: 20px;
   margin-right: 100px;
+}
+
+.logo-imagem {
+  width: 50px;
+  height: auto;
 }
 
 .menu-items {
@@ -29,5 +31,9 @@
   color: white;
   text-decoration: none;
   font-size: 14px;
+  transition: color 0.3s;
 }
 
+.menu-item:hover {
+  color: #f0f0f0;
+}
