--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -8,18 +8,19 @@
   .painel-lateral {
     width: 250px;
     background-color: #f5f5f5;
+    margin-top: 85px;
   }
   
-  item-lista {
+  .item-lista {
     padding: 16px;
   }
   
-  texto-item-lista {
+  .texto-item-lista {
     font-weight: bold;
     color: #333;
   }
   
-  item-lista:hover {
+  .item-lista:hover {
     background-color: #e0e0e0;
   }
   
