--- a/src/pages/agendarConsulta/styles.css
+++ b/src/pages/agendarConsulta/styles.css
@@ -1,3 +1,8 @@
+.container-principal{
+  background-color: #9A9A9A;
+  height: 100%;
+}
+
 .option-dropdown {
   margin-top: 0;
   width: 100%;
@@ -25,12 +30,18 @@ option {
 }
 
 .container-div {
+  padding-top: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 50%;
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 60%;
+  margin-top: 2%;
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-bottom: 4%;
+  background-color: white;
 }
 
 .dropdown-medico{
@@ -42,8 +53,20 @@ option {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding: 20px 20px;
+  margin-top: 20%;
+  width: 242px;
+  height: 165px;
+  border: 0.3px solid #00000075;;
+  box-shadow: -2px 3px 9px 1px #0000004d;
+  background-color: white;
 }
 
 .container-resumo-consulta p{
   margin: 0.3em;
+}
+
+.div-botao{
+  display: flex;
+  justify-content: space-between;
 }
