--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -5,21 +5,45 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20vh;
+  width: 70%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Inria Sans', sans-serif;
 }
 
 .formulario-login {
-  width: 100%;
+  width: 50%;
   margin-top: 10px;
+}
+
+.formulario-login div {
+  margin-bottom: 10px;
+}
+
+.formulario-login label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.formulario-login input {
+  width: 100%;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .botao-login {
   background-color: black;
+  color: white;
+  border: none;
   margin-top: 20px;
   padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-
+.botao-login:hover {
+  background-color: #333;
+}
