--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -1,49 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@400;700&display=swap');
-
-.caixa-login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20vh;
-  width: 70%;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
+.container-login {
+  width: 100%;
+  max-width: 400px;
+  margin: 100px auto;
+  padding: 30px;
+  background: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  font-family: 'Inria Sans', sans-serif;
+  border-radius: 8px;
 }
 
 .formulario-login {
-  width: 50%;
-  margin-top: 10px;
+  max-width: 300px;
+  margin: 0 auto;
 }
 
-.formulario-login div {
-  margin-bottom: 10px;
-}
-
-.formulario-login label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.formulario-login input {
-  width: 100%;
-  padding: 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+.esqueceu-senha {
+  float: right;
 }
 
 .botao-login {
-  background-color: black;
-  color: white;
-  border: none;
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 4px;
-  cursor: pointer;
+  width: 100%;
+  background-color: #00001E; 
+  border-color: #00001E;
 }
 
 .botao-login:hover {
-  background-color: #333;
+  background-color: #000033; 
+  border-color: #000033;
 }
