--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -1,26 +1,20 @@
-.icone-menu {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    color: #000;
+.layout-fundo {
+    background-color: #f0f2f5;
   }
   
-  .painel-lateral {
-    width: 250px;
-    background-color: #f5f5f5;
-    margin-top: 85px;
+  .menu-lateral {
+    height: 100%;
+    border-right: 0;
   }
   
-  .item-lista {
-    padding: 16px;
-  }
-  
-  .texto-item-lista {
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .item-lista:hover {
-    background-color: #e0e0e0;
-  }
-  
+
+.handle-resize {
+  width: 5px;
+  cursor: ew-resize;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  background-color: transparent;
+}
