--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: flex-start;
   align-items: center;
   font-family: 'Inria Sans', sans-serif;
-  background-color: black;
+  background-color: rgb(0, 0, 25);
   padding: 15px 20px;
 }
 
