--- a/src/pages/agendarConsulta/styles.css
+++ b/src/pages/agendarConsulta/styles.css
@@ -1,6 +1,10 @@
 .container-principal{
   background-color: #9A9A9A;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .option-dropdown-tipoConsulta {
@@ -38,19 +42,19 @@ option {
 }
 
 .container-div {
-  padding-top: 1%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 1.5%;
+  /* padding-left: 5%;
+  padding-right: 5%; */
+  padding-bottom: 1%;
   display: inline-flex;
   flex-direction: row;
   justify-content: space-around;
   width: 60%;
-  margin-top: 1.5%;
+  margin-top: 0.5%;
   margin-left: 4%;
   margin-right: 4%;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
   background-color: white;
+  border-radius: 4px;
 }
 
 .dropdown-medico{
@@ -102,4 +106,12 @@ option {
   margin: 0 20px;
   display: inline-block;
   vertical-align: middle;
+}
+
+.lembrete-consulta{
+  background-color: white;
+  margin-top: 10px;
+  width: 60%;
+  align-items: center;
+  border-radius: 4px;
 }
