--- a/src/pages/personalizaAgenda/styles.css
+++ b/src/pages/personalizaAgenda/styles.css
@@ -127,3 +127,24 @@
 .modal-container button {
   margin-top: 10px;
 }
+
+.div-modal{
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+.botao-personalizacao{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.agenda-personalizacao{
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+  margin-left: 30%;
+  justify-content: space-between;
+  width:40%;
+}
