--- a/src/pages/agendarConsulta/styles.css
+++ b/src/pages/agendarConsulta/styles.css
@@ -1,6 +1,6 @@
 .container-principal{
   background-color: #9A9A9A;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
