--- a/src/pages/dashboard/styles.css
+++ b/src/pages/dashboard/styles.css
@@ -10,20 +10,28 @@
 
 .botao-status {
   border: none;
-  color: white !important; /* Força a cor branca no texto */
+  color: white !important;
 }
 
 .botao-sucesso {
-  background-color: #52c41a !important; /* Verde */
-  border-color: #52c41a !important; /* Ajusta a cor da borda */
+  background-color: #52c41a !important; 
+  border-color: #52c41a !important;
 }
 
 .botao-aviso {
-  background-color: #faad14 !important; /* Amarelo */
-  border-color: #faad14 !important; /* Ajusta a cor da borda */
+  background-color: #faad14 !important;
+  border-color: #faad14 !important; 
 }
 
 .botao-erro {
-  background-color: #f5222d !important; /* Vermelho */
-  border-color: #f5222d !important; /* Ajusta a cor da borda */
+  background-color: #f5222d !important;
+  border-color: #f5222d !important;
 }
+
+.botao-exportar-pdf {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  z-index: 1000;
+}
+
