--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: flex-start;
   align-items: center;
   font-family: 'Inria Sans', sans-serif;
-  background-color: rgb(0, 0, 25);
+  background-color: #001529;
   padding: 15px 20px;
 }
 
@@ -24,16 +24,15 @@
   font-family: 'Inria Sans', sans-serif;
   display: flex;
   gap: 60px;
-  
 }
 
 .menu-item {
-  color: white;
+  color: #ffffff;
   text-decoration: none;
   font-size: 14px;
-  transition: color 0.3s;
+  transition: color 0.3s ease;
 }
 
 .menu-item:hover {
-  color: #f0f0f0;
+  color: #00bfa5;
 }
