--- a/src/components/modal-mensagem/styles.css
+++ b/src/components/modal-mensagem/styles.css
@@ -1,53 +1,43 @@
-.modal-fundo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    max-width: 400px;
-    width: 80%;
-  }
-  
-  .modal p {
-    margin-bottom: 20px;
-  }
-  
-  .checkbox-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .checkbox-container input {
-    margin-right: 10px;
-  }
-  
-  .modal button {
-    padding: 10px 20px;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .modal button:disabled {
-    background-color: grey;
-    cursor: not-allowed;
-  }
-  
-  .modal button:hover:not(:disabled) {
-    background-color: #333;
-  }
-  
+
+.ant-modal-content {
+  background-color: #1c1c1c;
+  border-radius: 10px;
+  color: #ffffff;
+}
+
+.ant-modal p {
+  margin-bottom: 20px;
+  color: #000000;
+}
+
+.ant-checkbox-wrapper {
+  display: flex;
+  align-items: center;
+  color: #000000;
+}
+
+.ant-btn-primary {
+  background-color: #004d40;
+  border-color: #004d40;
+  color: #000000; 
+}
+
+.ant-btn-primary:hover {
+  background-color: #00bfa5;
+  border-color: #00bfa5;
+}
+
+.ant-btn {
+  border-radius: 5px;
+}
+
+.ant-btn[disabled] {
+  background-color: grey;
+  border-color: grey;
+  cursor: not-allowed;
+  color: #ffffff;
+}
+
+.ant-modal-title {
+  color: #ffffff; 
+}
