--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,19 +1,32 @@
 .home {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #002b36;
+  overflow: hidden;
+}
+
+.letreiro-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
 }
 
 .botao-grande {
+  z-index: 1;
   font-size: 24px;
   text-transform: uppercase;
   padding: 0 40px;
   height: 60px;
   border-radius: 8px;
-  background-color: #004d40; 
-  color: #ffffff; 
+  background-color: #004d40;
+  color: #ffffff;
   border: none;
   transition: background-color 0.3s ease;
 }
@@ -56,8 +69,8 @@
 
 .ant-input,
 .ant-select-selector {
-  background-color: #002b36; 
-  color: #ffffff; 
+  background-color: #002b36;
+  color: #ffffff;
   border: 1px solid #00bfa5;
 }
 
