--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #002b36;
+  background-color: #ecf5f7;
   overflow: hidden;
 }
 
