--- a/src/pages/confirmarConsulta/style.css
+++ b/src/pages/confirmarConsulta/style.css
@@ -8,6 +8,19 @@
   text-align: center;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7); /* Fundo semi-transparente */
+  z-index: 1000; /* Acima dos outros elementos */
+}
+
 .confirmacao-consulta h2 {
   margin-bottom: 15px;
 }
