--- a/src/pages/confirmarConsulta/style.css
+++ b/src/pages/confirmarConsulta/style.css
@@ -1,10 +1,23 @@
-.confirmacao-consulta {
-  padding: 80px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  max-width: 600px;
-  margin: 9%;
+.modal-backdrop {
+  width: 100%;
+  height: 100%;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Garante que fique acima do conteúdo */
+  overflow: auto; /* Permite rolagem se necessário */
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.confirmacao-consulta {
+  background-color: white;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 60px;
+  width: 100%; /* Ajusta o tamanho para a largura disponível */
   text-align: center;
 }
 
