--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   font-family: 'Inria Sans', sans-serif;
   background-color: #001529;
   padding: 15px 20px;
+  justify-content: space-between;
 }
 
 .logo {
