--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -1,7 +1,6 @@
 .footer {
     background-color: #001529; /* Azul petróleo */
     color: #ffffff;
-    padding: 20px 0;
     text-align: center;
   }
   
@@ -53,8 +52,7 @@
   
   .footer-bottom {
     background-color: #000814;
-    padding: 10px 0;
-    margin-top: 20px;
+    padding: 1px;
   }
   
   .login-link {
