--- a/src/pages/faq/ssss.css
+++ b/src/pages/faq/ssss.css
@@ -1,4 +1,4 @@
-.faq-principal {
+.faq-question {
         margin-bottom: 15px;
         border: 1px solid #e0e0e0;
         border-radius: 8px;
@@ -13,6 +13,7 @@
     .faq-container {
         max-width: 700px;
         margin: 0 auto;
+        height: 600px;
         padding: 20px;
     }
     
